--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   http: ^0.12.1
   shared_preferences: ^0.5.7+2
   cupertino_icons: ^0.1.3
-
+  jwt_decode: ^0.1.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
@@ -48,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/buttons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
