--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   shared_preferences: ^0.5.7+2
   cupertino_icons: ^0.1.3
   jwt_decode: ^0.1.0
+  flutter_form_builder:
+  rflutter_alert: ^1.0.3
+  loading_overlay: ^0.2.1
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/buttons/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
